--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,30 @@
-.App {
-  text-align: center;
+.main_view {
+  width: 100%;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.main_app {
+  padding: 22px;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  gap: 32px;
+}
+.top_items {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media screen and (min-width: 768px) {
+  .top_items {
+    flex-direction: row;
   }
-  to {
-    transform: rotate(360deg);
+}
+
+@media screen and (min-width: 991px) {
+  .main_view {
+    width: calc(100% - 270px);
+    margin-left: 270px;
+  }
+  .main_app {
+    padding: 22px 40px;
   }
 }
