--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,42 @@
+@font-face {
+  font-family: "Sohne Bold";
+  font-weight: 600;
+  src: url("./assets/font/soehne-kraftig.woff2");
+}
+
+@font-face {
+  font-family: "Sohne";
+  font-weight: 400;
+  src: url("./assets/font/soehne-buch.woff2");
+}
+
+*,
+*::after,
+*::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: "Sohne", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
+    "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+ul {
+  list-style: none;
+}
+
+.error_message {
+  color: #e30303;
+  text-align: center;
 }
